--- a/absence-tracker/src/main/webapp/pages/secure/secureTemplate.xhtml
+++ b/absence-tracker/src/main/webapp/pages/secure/secureTemplate.xhtml
@@ -34,7 +34,7 @@
                         <sec:authorize ifAllGranted="MANAGER">
                             <p:separator />
                             <p:menuitem id="authoriseLeave" value="authoriseLeave" action="#{navigationController.showHolidayAuthoriseFeatures}" icon="ui-icon-person"/>
-                            <p:menuitem id="absenceManagement" value="absenceMgmt" action="#{navigationController.showEnterAbsenceFeatures}" icon="ui-icon-mail-open"/>
+                            <p:menuitem id="absenceMgt" value="absenceMgt" action="#{navigationController.showEnterAbsenceFeatures}" icon="ui-icon-mail-open"/>
                         </sec:authorize>
 
 
