Added Employee Stats Panel

--- a/absence-tracker/src/main/webapp/pages/secure/holiday/management/departmentHolidayStatsDialog.xhtml
+++ b/absence-tracker/src/main/webapp/pages/secure/holiday/management/departmentHolidayStatsDialog.xhtml
@@ -6,7 +6,7 @@
 
     <p:dialog id="departmentHolidayStatsDialog" widgetVar="_departmentHolidayStatsDialog" header="Department Holiday Statistics"
               width="1010" modal="true" dynamic="true" resizable="false" closable="true">
-        <p:scrollPanel mode="native" style="width:985px;height:530px">
+        <p:scrollPanel mode="native" style="width:985px;height:530px" styleClass="borderLess">
         <h:form id="departmentHolidayStatsForm">
 
             <h:panelGrid columns="2" style="width:100%;" columnClasses="alignColumnTop,alignColumnTop">
