--- a/absence-tracker/src/main/webapp/pages/secure/absence/employee/employeeAbsenceStatsDialog.xhtml
+++ b/absence-tracker/src/main/webapp/pages/secure/absence/employee/employeeAbsenceStatsDialog.xhtml
@@ -3,12 +3,20 @@
                 xmlns:h="http://java.sun.com/jsf/html"
                 xmlns:p="http://primefaces.org/ui">
 
-    <p:dialog id="employeeAbsenceStatsDialog" widgetVar="_employeeAbsenceStatsDialog" width="720" header="Absence Statistics" modal="true"
-              dynamic="true" resizable="false" closable="true">
+    <p:dialog id="employeeAbsenceStatsDialog" widgetVar="_employeeAbsenceStatsDialog" header="Absence Statistics" modal="true"
+              width="1200" dynamic="true" resizable="false" closable="true">
         <h:form id="employeeAbsenceStats">
-            <p:chart id="authorisedAbsenceChart" type="bar" model="#{employeeAbsenceController.authorisedAbsenceStats}" styleClass="authorisedAbsenceChart" widgetVar="authorisedAbsenceChart"/>
-            <p:separator/>
-            <p:chart id="unauthorisedAbsenceChart" type="bar" model="#{employeeAbsenceController.unauthorisedAbsenceStats}" styleClass="unauthorisedAbsenceChart" widgetVar="unauthorisedAbsenceChart"/>
+
+            <h:panelGrid columns="2" style="width:100%;"
+                         columnClasses="absenceStatsColumnOne,absenceStatsColumnTwo">
+                <p:panel styleClass="borderLess">
+                    <p:chart id="authorisedAbsenceChart" type="bar" model="#{employeeAbsenceController.authorisedAbsenceStats}" styleClass="authorisedAbsenceChart" widgetVar="authorisedAbsenceChart"/>
+                </p:panel>
+                <p:panel styleClass="borderLess">
+                    <p:chart id="unauthorisedAbsenceChart" type="bar" model="#{employeeAbsenceController.unauthorisedAbsenceStats}" styleClass="unauthorisedAbsenceChart" widgetVar="unauthorisedAbsenceChart"/>
+                </p:panel>
+
+            </h:panelGrid>
         </h:form>
     </p:dialog>
 </ui:composition>
