--- a/absence-tracker/src/main/webapp/pages/secure/absence/management/departmentAbsenceStatsDialog.xhtml
+++ b/absence-tracker/src/main/webapp/pages/secure/absence/management/departmentAbsenceStatsDialog.xhtml
@@ -1,14 +1,49 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml"
                 xmlns:ui="http://java.sun.com/jsf/facelets"
                 xmlns:h="http://java.sun.com/jsf/html"
-                xmlns:p="http://primefaces.org/ui">
+                xmlns:p="http://primefaces.org/ui"
+                xmlns:c="http://java.sun.com/jsp/jstl/core">
 
-    <p:dialog id="departmentAbsenceStatsDialog" widgetVar="_departmentAbsenceStatsDialog" width="720" header="Department Absence Statistics" modal="true"
-              dynamic="true" resizable="false" closable="true">
-        <h:form id="departmentAbsenceStats">
-            <p:chart id="authorisedAbsenceChart" type="bar" model="#{absenceManagementController.authorisedAbsenceStats}" styleClass="authorisedAbsenceChart" widgetVar="authorisedAbsenceChart"/>
-            <p:separator/>
-            <p:chart id="unauthorisedAbsenceChart" type="bar" model="#{absenceManagementController.unauthorisedAbsenceStats}" styleClass="unauthorisedAbsenceChart" widgetVar="unauthorisedAbsenceChart"/>
-        </h:form>
+    <p:dialog id="departmentAbsenceStatsDialog" widgetVar="_departmentAbsenceStatsDialog"
+              header="Department Absence Statistics" modal="true"
+              width="1200" dynamic="true" resizable="false" closable="true">
+        <p:scrollPanel mode="native" style="width:1180px;height:530px" styleClass="borderLess">
+            <h:form id="departmentAbsenceStats">
+
+                <h:panelGrid columns="2" style="width:100%;"
+                             columnClasses="absenceStatsColumnOne,absenceStatsColumnTwo">
+                    <p:panel styleClass="borderLess">
+                        <p:chart id="authorisedAbsenceChart" type="bar"
+                                 model="#{absenceManagementController.authorisedAbsenceStats}"
+                                 styleClass="authorisedAbsenceChart" widgetVar="authorisedAbsenceChart"/>
+                    </p:panel>
+                    <p:panel styleClass="borderLess">
+                        <p:chart id="unauthorisedAbsenceChart" type="bar"
+                                 model="#{absenceManagementController.unauthorisedAbsenceStats}"
+                                 styleClass="unauthorisedAbsenceChart" widgetVar="unauthorisedAbsenceChart"/>
+                    </p:panel>
+
+                </h:panelGrid>
+
+                <p:separator/>
+
+                <h:panelGrid columns="2" style="width:100%;"
+                             columnClasses="absenceStatsColumnOne,absenceStatsColumnTwo">
+
+                    <c:forEach var="employeeStats" items="#{absenceManagementController.employeeAbsenceStats}">
+                        <p:panel styleClass="borderLess">
+                            <p:chart type="bar" model="${employeeStats.authorisedAbsence}"
+                                     styleClass="authorisedAbsenceChart" widgetVar="authorisedAbsenceChart${employeeStats.index}"/>
+                        </p:panel>
+                        <p:panel styleClass="borderLess">
+                            <p:chart type="bar" model="${employeeStats.unAuthorisedAbsence}"
+                                     styleClass="unauthorisedAbsenceChart" widgetVar="unauthorisedAbsenceChart${employeeStats.index}"/>
+                        </p:panel>
+                    </c:forEach>
+
+                </h:panelGrid>
+
+            </h:form>
+        </p:scrollPanel>
     </p:dialog>
 </ui:composition>
