--- a/absence-tracker/src/main/webapp/pages/secure/holiday/employee/employeeHolidayStatsDialog.xhtml
+++ b/absence-tracker/src/main/webapp/pages/secure/holiday/employee/employeeHolidayStatsDialog.xhtml
@@ -4,7 +4,7 @@
                 xmlns:p="http://primefaces.org/ui">
 
     <p:dialog id="employeeHolidayStatsDialog" widgetVar="_employeeHolidayStatsDialog" header="Holiday Statistics"
-              width="1000" modal="true" dynamic="true" resizable="false" closable="true">
+              width="1070" modal="true" dynamic="true" resizable="false" closable="true">
 
         <h:form id="employeeHolidayStatsForm">
 
@@ -12,7 +12,7 @@
             <h:panelGrid columns="2" style="width:100%;" columnClasses="alignColumnTop,alignColumnTop">
                 <p:panel styleClass="borderLess">
                     <p:chart id="employeeHolidayAllowancePie" type="donut"
-                             model="#{holidayManagementController.holidayAllowance.detailedDonutModel}"
+                             model="#{holidayManagementController.holidayBalanceDonutModel}"
                              styleClass="holidayAllowanceDetailsPie"/>
 
                 </p:panel>
